continue restructuring project