@@ -30,78 +30,6 @@ subprojects {
   }
 }
 
-allprojects {
-  apply plugin: "java"
-  apply plugin: "groovy"
-  apply plugin: "org.springframework.boot"
-
-  repositories {
-    mavenCentral()
-    mavenLocal()
-  }
-
-  dependencies {
-
-    implementation libs.rlib.network
-    implementation libs.rlib.logger.slf4j
-    implementation libs.springboot.starter.core
-    implementation libs.springboot.starter.log4j2
-    implementation libs.project.reactor.core
-    implementation libs.gson
-
-    compileOnly libs.jspecify
-    compileOnly libs.lombok
-    annotationProcessor libs.lombok
-
-    // FIXME to remove
-    testImplementation libs.hivemq.mqtt.client
-    // FIXME to remove
-    testImplementation libs.moquette.broker
-    testImplementation libs.spring.test
-    testImplementation libs.spock.core
-    testImplementation libs.spock.spring
-    testImplementation libs.groovy.all
-    testImplementation libs.byte.buddy.dep
-    testImplementation libs.objenesis
-  }
-
-  test {
-    useJUnitPlatform()
-    failOnNoDiscoveredTests = false
-  }
-
-  sourceSets {
-    main {
-      java {
-        srcDirs 'src/main/groovy'
-      }
-    }
-    test {
-      java {
-        srcDirs 'src/test/groovy'
-      }
-    }
-  }
-
-  tasks.withType(Test).configureEach {
-    maxParallelForks = 2
-    forkEvery = 100
-    jvmArgs += "--enable-preview"
-  }
-
-  tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
-  }
-
-  tasks.withType(GroovyCompile).configureEach {
-    options.forkOptions.jvmArgs += "--enable-preview"
-  }
-
-  processResources {
-    filter(ReplaceTokens, tokens: [])
-  }
-}
-
 tasks.register("buildSingleArtifact", GradleBuild) {
   group = "build"
   description = "Build all modules -> Build result artifact"
